projects/vb6parse/snapshots/parsers/cst/objects/events/raiseevent_statement_at_module_level.snap
---
source: projects/vb6parse/tests/objects/events.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: RaiseEventStatement
      children:
        - kind: RaiseEventKeyword
          text: RaiseEvent
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: GlobalEvent
        - kind: Newline
          text: "\n"
